--- a/public/css/createAccount.css
+++ b/public/css/createAccount.css
@@ -32,6 +32,8 @@ body{
 }
 
 #input-container{
+    position: relative;
+    top:-150px;
     width: 100%;
     height:60%;
     margin:auto;
@@ -66,7 +68,7 @@ body{
     border-radius: 5px;
     border: none;
     font-weight: bold;
-    margin:20px 0px;
+    margin:20px;
     font-size: 20px;
     color: whitesmoke;
 }
