--- a/public/css/forgot.css
+++ b/public/css/forgot.css
@@ -26,10 +26,19 @@ body{
     padding: 0px 30px;
 }
 
+
 #crs-logo{
     position: relative;
     height: 25%;
     width: 40%;
+}
+
+#crs-para{
+    font-size: 40px;
+    color: rgb(80, 49, 4);
+    font-weight: bold;
+    font-family: Impact, fantasy;
+    font-style: italic;
 }
 
 #input-container{
@@ -57,50 +66,9 @@ body{
     border:1px groove rgb(85, 84, 84);
 }
 
-
-.signin-button{
-    height: 10%;
-    width: 25%;
-    align-self: left;
-    background-color: rgb(9, 138, 189);
-    border-radius: 5px;
-    border: none;
-    font-weight: bold;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    font-size: 20px;
-    color: whitesmoke;
-}
-
-.signin-button:hover{
-    background-color: rgb(76, 173, 211);
-}
-
-#crs-para{
-    font-size: 40px;
-    color: rgb(80, 49, 4);
-    font-weight: bold;
-    font-family: Impact, fantasy;
-    font-style: italic;
-}
-
-#forgot-password{
-    font-size: 20px;
-    color: rgb(36, 136, 36);
-    font-weight: bold;
-    font-family: Trebuchet MS, sans-serif;
-}
-
-#forgot-password:hover{
-    font-size: 20px;
-    color: rgb(85, 84, 8);
-    font-weight: bold;
-    font-family: Trebuchet MS, sans-serif;
-}
-
 .home-button{
     margin: 10px 10px 10px 10px;
-    height: 10%;
+    height: 8%;
     width: 20%;
     align-self: left;
     background-color: #477034;
@@ -113,4 +81,40 @@ body{
 
 .home-button:hover{
     background-color: #213518;
+}
+
+.verify-button{
+    height: 7%;
+    width: 18%;
+    align-self: left;
+    background-color: rgb(9, 138, 189);
+    border-radius: 5px;
+    border: none;
+    font-weight: bold;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    font-size: 20px;
+    color: whitesmoke;
+}
+
+.verify-button:hover{
+    background-color: rgb(76, 173, 211);
+}
+
+.send-button{
+    height: 7%;
+    width: 17%;
+    align-self: left;
+    font-weight: bold;
+    background-color: black;
+    border-radius: 5px;
+    border: none;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    font-size: 12px;
+    color: whitesmoke;
+}
+
+.send-button:hover{
+    background-color: grey;
 }
