--- a/public/css/register.css
+++ b/public/css/register.css
@@ -175,3 +175,21 @@ a {
 input[type="req"]:required:invalid{
     border-color: black;
 }
+
+
+.home-button{
+    margin: 10px 10px 10px 10px;
+    height: 10%;
+    width: 20%;
+    align-self: left;
+    background-color: #477034;
+    border-radius: 5px;
+    border: none;
+    font-weight: bold;
+    font-size: 20px;
+    color: whitesmoke;
+}
+
+.home-button:hover{
+    background-color: #213518;
+}
