--- a/public/css/forgot.css
+++ b/public/css/forgot.css
@@ -77,6 +77,7 @@ body{
     font-weight: bold;
     font-size: 20px;
     color: whitesmoke;
+    cursor: pointer;
 }
 
 .home-button:hover{
@@ -95,6 +96,7 @@ body{
     margin-bottom: 20px;
     font-size: 20px;
     color: whitesmoke;
+    cursor: pointer;
 }
 
 .verify-button:hover{
@@ -113,8 +115,64 @@ body{
     margin-bottom: 20px;
     font-size: 12px;
     color: whitesmoke;
+    cursor: pointer;
 }
 
 .send-button:hover{
     background-color: grey;
+}
+
+#reset-form{
+    width: 100%;
+    height:60%;
+    align-items: center;
+    justify-content: center;
+    align-content: center;
+    display: none;
+}
+
+#reset-button{
+    height: 7%;
+    width: 19%;
+    align-self: left;
+    background-color: rgb(9, 138, 189);
+    border-radius: 5px;
+    border: none;
+    font-weight: bold;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    font-size: 20px;
+    color: whitesmoke;
+    cursor: pointer;
+}
+
+#reset-button:hover{
+    background-color: rgb(76, 173, 211);
+}
+
+#reset-para{
+    font-size: 30px;
+    color: #477034;
+    font-weight: bold;
+    font-family: Impact, fantasy;
+}
+
+.eye-button {
+    position: absolute;
+    right: 25%;
+    top: 68.1%;
+    transform: translateY(-50%);
+    cursor: pointer;
+    width: 25px;
+    height: 20px;
+}
+
+.eye-button2 {
+    position: absolute;
+    right: 25%;
+    top: 79.2%;
+    transform: translateY(-50%);
+    cursor: pointer;
+    width: 25px;
+    height: 20px;
 }
