Email Template and New Reservation div created

--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -195,4 +195,10 @@ body{
     float: right;
     margin-top: calc(-100vh + 142px);
     overflow-x: scroll;
+    justify-content: center;
+    align-items: center;
+}
+
+
+#fa{
 }
